updated deprecated method and ammended simabnkTerminalImpl instances
Signed-off-by: Aaron Jhaj <Aaron.Jhaj@ibm.com>